<resources>
    <string name="app_name">Easy Invest</string>
    <string name="bottom_arrow">&#9660;</string>
    <string name="up_arrow">&#9650;</string>
    <string-array name="select_sort_spinner">
        <item>По актуальности</item>
        <item>От новых к старым</item>
        <item>От старых к новым</item>
    </string-array>

    <!-- Retrofit -->
    <string name="base_url">https://protected-cliffs-60934.herokuapp.com/</string>


    <!-- For login -->
    <string name="enter_email">Введите e-mail</string>
    <string name="login_title">Вход/Регистрация</string>
    <string name="enter_password">Введите пароль (не менее 8 символов)</string>
    <string name="enter">Вход</string>
    <string name="registration">Регистрация</string>
    <string name="attention">Внимание</string>
    <string name="no_message">Без сообщения</string>
    <string name="cancel_btn">Ок</string>
    <string name="save_login_field">Запомнить пароль</string>

    <!-- For dialogs -->
    <string name="dialog_message_email_exist_message">Пользователь с такой почтой уже существует, используйте другой e-mail или авторизуйтесь.</string>
    <string name="dialog_message_wrong_email_or_password">Введите корректный почтовый адрес и пароль длиной не менее 8 символов</string>
    <string name="dialog_message_login_denied">Неверный логин или пароль</string>

    <!-- For Shared Preferences -->
    <string name="shared_pref_checkbox">com.cgpanda.easyinvest.check</string>
    <string name="shared_pref_email">com.cgpanda.easyinvest.email</string>
    <string name="shared_pref_password">com.cgpanda.easyinvest.password</string>
    <string name="shared_pref_api_key">com.cgpanda.easyinvest.apikey</string>
    <string name="shared_pref_active_email">com.cgpanda.easyinvest.active.email</string>


    <!-- For portfolio screen -->
    <string name="empty_portfolio_message">У вас еще ничего нет.\nСоберите ваш первый инвестиционный портфель сейчас:</string>
    <string name="pick_new_portfolio">Собрать портфель</string>
    <string name="portfolio_title">Ваш портфель</string>
    <string name="amount">%d шт.</string>
    <string name="portfolio_full_price">Общая стоимость:</string>
    <string name="portfolio_full_change">Изменение:</string>

</resources>
