<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:layout_centerHorizontal="true"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="#000"
            android:textSize="32sp"
            android:maxLines="1"
            android:letterSpacing="0.25" />

        <androidx.cardview.widget.CardView
            android:id="@+id/login_card_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:cardCornerRadius="15dp"
            android:layout_marginHorizontal="40dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp">
                <TextView
                    android:id="@+id/login_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_title"
                    android:textSize="26sp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="25dp"
                    android:textAllCaps="true"
                    android:maxLines="1" />

                <EditText
                    android:id="@+id/email_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:hint="@string/enter_email"
                    android:layout_below="@id/login_title"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginBottom="5dp"
                    android:paddingVertical="20dp" />

                <EditText
                    android:id="@+id/password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:hint="@string/enter_password"
                    android:layout_below="@id/email_et"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginBottom="20dp"
                    android:paddingVertical="20dp"/>
                <LinearLayout
                    android:id="@+id/reg_btns_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@id/password_et"
                    android:gravity="center_horizontal"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginBottom="50dp">
                    <Button
                        android:id="@+id/enter_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/enter"
                        android:layout_weight="1"/>
                    <Button
                        android:id="@+id/register_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/registration"
                        android:layout_weight="1"/>
                </LinearLayout>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/login_progress_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="@drawable/dark_background"
        android:visibility="gone">
        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"/>
    </LinearLayout>
</FrameLayout>