<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".View.Fragments.portfolio.PortfolioFragment">

<!-- Интерфейс портфеля -->
    <LinearLayout
        android:id="@+id/portfolio_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:baselineAligned="false"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/portfolio_title"
            android:textSize="26sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:letterSpacing="0.15"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="180dp"
            android:orientation="vertical"
            android:background="#E4E4E4">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="15dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginVertical="10dp"
                    android:layout_marginHorizontal="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_weight="1.2"
                        android:layout_marginEnd="5dp"
                        android:gravity="center">
                        <TextView
                            android:id="@+id/full_price_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:text="@string/portfolio_full_price"
                            />
                        <TextView
                            android:id="@+id/portfolio_full_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="24sp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_marginStart="5dp"
                        android:gravity="center">
                        <TextView
                            android:id="@+id/change_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/portfolio_full_change"
                            android:textSize="16sp"/>
                        <TextView
                            android:id="@+id/portfolio_change"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"/>
                    </LinearLayout>

                </LinearLayout>


            </androidx.cardview.widget.CardView>
            <ImageView
                android:id="@+id/chart"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/pie_chart"
                android:scaleType="centerCrop"
                android:layout_marginVertical="20dp"
                android:background="#E4E4E4"/>
        </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/portfolio_tabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/portfolio_tabs_container_vp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
                    android:layout_below="@id/portfolio_tabs"/>
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

<!-- Интерфейс, который отображается, если портфель пустой -->
    <LinearLayout
        android:id="@+id/empty_portfolio_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/portfolio_title"
            android:textSize="26sp"
            android:layout_marginBottom="20dp"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:letterSpacing="0.15"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/empty_portfolio_message"
            android:textSize="18sp"
            android:textAlignment="center"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_new_portfolio"/>
    </LinearLayout>

<!-- Показывается при какой-либо загрузке -->
    <ProgressBar
        android:id="@+id/portfolio_loading_pb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>
</RelativeLayout>